# alize-core

./: .gitignore  ALIZE.sln  ALIZE_2005.sln  AUTHORS  DOCUMENTATION  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  alize.Makefile  autogen.sh  config.status  configure  configure.ac  configure.in  doxygen.cfg  libtool
ALIZE/autom4te.cache/: output.1
ALIZE/example1/: README  aclocal.m4  config.cache  config.xml  defaultConfig.txt  libtool
ALIZE/src/: CmdLine.cpp  (+55 more)
autom4te.cache/: output.0  requests  traces.0
example1/: Makefile.in  main.sh
include/: AudioFileReader.h  AutoDestructor.h  CmdLine.h  ConfigFileReaderAbstract.h  ConfigFileReaderRaw.h  ConfigFileWriter.h  Distrib.h  DistribGD.h  DistribGF.h  DistribRefVector.h  DoubleSquareMatrix.h  Exception.h  Feature.h  FeatureFileReader.h  FeatureFileReaderAbstract.h  FeatureFileReaderHTK.h  FeatureFileReaderRaw.h  FeatureFileReaderSPro4.h  FeatureFileReaderSingle.h  FeatureFileWriter.h  FeatureFlags.h  FeatureInputStreamModifier.h  FeatureServer.h  FrameAcc.h  LKVector.h  LabelFileReader.h  LabelServer.h  Matrix.h  Mixture.h  MixtureDict.h  MixtureFileReader.h  MixtureFileReaderAbstract.h  MixtureFileReaderRaw.h  MixtureFileReaderXml.h  MixtureGDStat.h  MixtureGFStat.h  MixtureServerFileReaderRaw.h  MixtureStat.h  Object.h  RealVector.h  (+5 more)
src/: AudioFrame.cpp  AudioInputStream.cpp  AutoDestructor.cpp  AutoDestructor.h  BoolMatrix.cpp  Config.cpp  ConfigFileReaderAbstract.cpp  ConfigFileReaderAbstract.h  ConfigFileReaderRaw.cpp  ConfigFileWriter.cpp  Distrib.h  DistribGD.cpp  DistribGF.cpp  DistribRefVector.cpp  DoubleSquareMatrix.cpp  DoubleSquareMatrix.h  Exception.h  Feature.cpp  Feature.h  FeatureComputer.cpp  FeatureFileList.cpp  FeatureFileReader.cpp  FeatureFileReaderHTK.cpp  FeatureFileReaderRaw.cpp  FeatureFileReaderSPro3.cpp  FeatureFileReaderSPro4.cpp  FeatureFileReaderSingle.cpp  FeatureFileReaderSingle.h  FeatureFlags.cpp  FeatureInputStream.cpp  FeatureInputStream.h  FeatureInputStreamModifier.cpp  FeatureMultipleFileReader.cpp  FeatureServer.cpp  FileReader.cpp  FileWriter.cpp  FrameAcc.cpp  FrameAcc.h  FrameAccGF.cpp  Histo.cpp  (+47 more)
src/.deps/: AutoDestructor.P  Config.P  ConfigFileReader.P  ConfigFileReaderAbstract.Po  ConfigFileReaderRaw.P  ConfigFileWriter.Po  Distrib.Po  DistribGD.P  DistribGF.Po  DistribRefVector.P  DistribType.P  DoubleSquareMatrix.Po  DoubleVector.P  Exception.P  Feature.P  Feature.Po  FeatureFileReader.P  FeatureFileReaderAbstract.Po  FeatureFileReaderHTK.Po  FeatureFileReaderRaw.P  FeatureFileReaderSPro3.P  FeatureFileReaderSPro3.Po  FeatureFileReaderSPro4.P  FeatureFileReaderSphere.Po  FeatureFileWriter.P  FeatureFileWriter.Po  FeatureFlags.P  FeatureMultipleFileReader.P  FeatureMultipleFileReader.Po  FeatureServer.P  FileReader.P  FrameAccGF.Po  LKVector.Po  Label.P  Label.Po  LabelFileReader.P  LabelServer.P  LabelSet.P  Mixture.P  MixtureDict.P  (+21 more)
test/: Makefile
trunk/: ALIZE_2005.sln  INSTALL  Makefile.am  Makefile.in  NEWS  README  configure.in  doxygen.cfg  libtool  update_makefile_am.sh
trunk/test/src/: Makefile.am  TestAudioFileReader.h  TestAudioFrame.h  TestDistribGD.cpp  TestDoubleSquareMatrix.cpp  TestException.cpp  TestFeatureFileReaderRaw.cpp  TestFeatureFileReaderRaw.h  TestFeatureFileReaderSPro4.h  TestFeatureFileWriter.h  TestFeatureInputStreamModifier.cpp  TestFeatureMultipleFileReader.cpp  TestFloatVector.cpp  TestFrameAccGD.cpp  TestLabel.cpp  TestLabel.h  TestLabelFileReader.cpp  TestLabelServer.cpp  TestMatrix.cpp  TestMixtureDict.cpp  TestMixtureDict.h  TestMixtureFileReaderAmiral.h  TestMixtureFileReaderXml.h  TestMixtureGD.h  TestMixtureGDStat.h  TestMixtureServerFileReaderRaw.cpp  TestMixtureServerFileWriter.cpp  TestRealVector.h  TestSegCluster.cpp  TestSegServerFileReaderRaw.h  TestSegServerFileWriter.h  TestViterbiAccum.h  TestXLine.cpp  TestXLine.h  main.cpp
trunk/test/src/.deps/: TestDistribGD.P  TestFeatureFlags.P  TestFeatureServer.P  TestFileUtil.P  TestLabelFileReader.P  TestLabelServer.P  TestMixtureGDStat.P  TestMixtureServer.P  TestString.P  TestSuite.P  TestXLine.P
wincfg/: ALIZE_2005.vcproj  ALIZE_2005.vcxproj  ALIZE_2010.vcxproj
(+412 files in other folders)
