lib_LIBRARIES=libalize.a

libalize_a_SOURCES=alizeString.cpp\
AudioFileReader.cpp\
AudioFrame.cpp\
AudioInputStream.cpp\
AutoDestructor.cpp\
CmdLine.cpp\
Config.cpp\
ConfigChecker.cpp\
ConfigFileReaderAbstract.cpp\
ConfigFileReaderRaw.cpp\
ConfigFileReaderXml.cpp\
ConfigFileWriter.cpp\
Distrib.cpp\
DistribGD.cpp\
DistribGF.cpp\
DistribRefVector.cpp\
DoubleSquareMatrix.cpp\
Exception.cpp\
Feature.cpp\
FeatureFileList.cpp\
FeatureFileReader.cpp\
FeatureFileReaderAbstract.cpp\
FeatureFileReaderHTK.cpp\
FeatureFileReaderRaw.cpp\
FeatureFileReaderSPro3.cpp\
FeatureFileReaderSPro4.cpp\
FeatureFileReaderSingle.cpp\
FeatureFileWriter.cpp\
FeatureFlags.cpp\
FeatureInputStream.cpp\
FeatureInputStreamModifier.cpp\
FeatureMultipleFileReader.cpp\
FeatureServer.cpp\
FileReader.cpp\
FileWriter.cpp\
FrameAcc.cpp\
FrameAccGD.cpp\
FrameAccGF.cpp\
Histo.cpp\
LKVector.cpp\
Label.cpp\
LabelFileReader.cpp\
LabelServer.cpp\
LabelSet.cpp\
Mixture.cpp\
MixtureDict.cpp\
MixtureFileReader.cpp\
MixtureFileReaderAbstract.cpp\
MixtureFileReaderAmiral.cpp\
MixtureFileReaderRaw.cpp\
MixtureFileReaderXml.cpp\
MixtureFileWriter.cpp\
MixtureGD.cpp\
MixtureGDStat.cpp\
MixtureGF.cpp\
MixtureGFStat.cpp\
MixtureServer.cpp\
MixtureServerFileReader.cpp\
MixtureServerFileReaderAbstract.cpp\
MixtureServerFileReaderRaw.cpp\
MixtureServerFileReaderXml.cpp\
MixtureServerFileWriter.cpp\
MixtureStat.cpp\
Object.cpp\
Seg.cpp\
SegAbstract.cpp\
SegCluster.cpp\
SegServer.cpp\
SegServerFileReaderAbstract.cpp\
SegServerFileReaderRaw.cpp\
SegServerFileWriter.cpp\
StatServer.cpp\
ULongVector.cpp\
ViterbiAccum.cpp\
XLine.cpp\
XList.cpp\
XListFileReader.cpp\
XmlParser.cpp

AM_CPPFLAGS=-I../include


