bin_PROGRAMS=test.exe
INCLUDES = -I../../src/

test_exe_SOURCES=Test.cpp\
TestAudioFileReader.cpp\
TestAudioFrame.cpp\
TestConfig.cpp\
TestConfigChecker.cpp\
TestConfigFileReader.cpp\
TestDistribGD.cpp\
TestDistribGF.cpp\
TestDistribRefVector.cpp\
TestDoubleSquareMatrix.cpp\
TestRealVector.cpp\
TestException.cpp\
TestFeature.cpp\
TestFeatureComputer.cpp\
TestFeatureFileList.cpp\
TestFeatureFileReader.cpp\
TestFeatureFileReaderHTK.cpp\
TestFeatureFileReaderRaw.cpp\
TestFeatureFileReaderSPro3.cpp\
TestFeatureFileReaderSPro4.cpp\
TestFeatureFileWriter.cpp\
TestFeatureFlags.cpp\
TestFeatureInputStreamModifier.cpp\
TestFeatureMultipleFileReader.cpp\
TestFeatureServer.cpp\
TestFileReader.cpp\
TestFrameAccGD.cpp\
TestFrameAccGF.cpp\
TestHisto.cpp\
TestLabel.cpp\
TestLabelFileReader.cpp\
TestLabelServer.cpp\
TestLabelSet.cpp\
TestMatrix.cpp\
TestMixtureDict.cpp\
TestMixtureFileReaderAmiral.cpp\
TestMixtureFileReaderRaw.cpp\
TestMixtureFileReaderXml.cpp\
TestMixtureFileWriter.cpp\
TestMixtureGD.cpp\
TestMixtureGDStat.cpp\
TestMixtureGF.cpp\
TestMixtureGFStat.cpp\
TestMixtureServer.cpp\
TestMixtureServerFileReaderRaw.cpp\
TestMixtureServerFileReaderXml.cpp\
TestMixtureServerFileWriter.cpp\
TestRefVector.cpp\
TestSeg.cpp\
TestSegCluster.cpp\
TestSegServer.cpp\
TestSegServerFileReaderRaw.cpp\
TestSegServerFileWriter.cpp\
TestStatServer.cpp\
TestString.cpp\
TestSuite.cpp\
TestULongVector.cpp\
TestViterbiAccum.cpp\
TestXLine.cpp\
TestXList.cpp\
TestXListFileReader.cpp\
main.cpp

test_exe_LDADD=../../src/libalize.a
